(tweak) update css styling to compact elements - update resume content (WIP)

--- a/hugo/layouts/partials/section-experience.html
+++ b/hugo/layouts/partials/section-experience.html
@@ -8,7 +8,7 @@
 	{{ range .roles }}
 	<div class="item">
 		<div class="flex-row">
-			<span class="item-title"><h2>{{ $company }} - {{ .role }}</h2></span>
+			<span class="job-title">{{ $company }} - {{ .role }}</span>
 			<span class="soft-color">{{ .date }}</span>
 		</div>
 		
