(tweak) fix name css

--- a/hugo/assets/css/_layout.scss
+++ b/hugo/assets/css/_layout.scss
@@ -75,7 +75,8 @@ main.paper {
 
       h1 {
         margin-bottom: 0.4rem;
-        font-size: 4rem;
+        margin-top: 1rem;
+        font-size: 3.5rem;
         color: $text-color;
         letter-spacing: 0.15rem;
         text-transform: uppercase;
